# shortlink

./: .gitignore  .ignore  AGENTS.md  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  routes.py  tenant.py
backend/app/core/: config.py
backend/app/dev/: __init__.py  seed_analytics.py
backend/app/domain/: __init__.py  errors.py  models.py
backend/app/handlers/: click_events.py
backend/app/repositories/: __init__.py  cognito.py  dynamodb.py  interfaces.py  memory.py  sqs.py
backend/app/schemas/: analytics.py  links.py  tenants.py
backend/app/services/: analytics.py  links.py  qr_codes.py  tenants.py
backend/tests/: test_analytics_aggregates.py  test_analytics_services.py  test_click_event_handler.py  test_dynamodb_repositories.py  test_link_services.py  test_qr_codes.py  test_sqs_click_event_publisher.py  test_tenant_dependency.py  test_tenant_registration.py
docs/: ARCHITECTURE.md  AUTH.md  CLOUDFLARE_DNS.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  ONBOARDING.html  SRS.docx  SRS.md  full-architecture.html
docs/superpowers/plans/: 2026-06-20-cognito-custom-auth-domain.md  (+5 more)
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthNavButton.tsx  CopyButton.tsx  QrCodeActions.tsx  Shell.tsx
frontend/lib/: api.ts  auth.ts
frontend/tests/: dashboard-icons.test.mjs
infra/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: shortlink-stack.ts
(+11 files in other folders)
