[project]
name = "shortlink-backend"
version = "0.1.0"
description = "ShortLink SaaS backend MVP skeleton"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
